hard-gists/5855372/run.log
=== Docker Run Log for 5855372 ===
Started at: Mi 29. Okt 16:06:09 CET 2025

[2025-10-29 16:06:09] START: Running container for 5855372
[2025-10-29 16:06:10] SUCCESS: Container 7cf9541445c1cf273a6416623f1ff95505499a9327ec7e3b2b85948e585754af started for 5855372
=== Container logs for 5855372 ===
  File "/snippet.py", line 39
    print r.content
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5855372 ===
[2025-10-29 16:06:12] INFO: Container 7cf9541445c1cf273a6416623f1ff95505499a9327ec7e3b2b85948e585754af has stopped
